# Rifly

./: LICENSE  README.md  index.html  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/domain/: audio.rs  dsp.rs  mod.rs  playlist.rs  track.rs
src-tauri/src/engine/: decoder.rs  device.rs  dsp_chain.rs  mod.rs  output.rs  player.rs  state.rs
src-tauri/src/engine/dsp/: crossfade.rs  equalizer.rs  mod.rs
src-tauri/src/infrastructure/: metadata.rs  scanner.rs
src-tauri/src/services/: discord.rs
src/components/: AddMusicForm.vue  AlbumCard.vue  AudioBadge.vue  EqBars.vue  MetadataEditor.vue  MiniPlayer.vue  PlayerBar.vue  RightPanel.vue  SearchBar.vue  Sidebar.vue  Topbar.vue  TrackList.vue
src/stores/: favorites.ts  library.ts  player.ts  spotify.ts  ui.ts
src/styles/: global.css
src/types/: index.ts
src/views/: HomeView.vue  LibraryView.vue  LikedSongsView.vue  NowPlayingView.vue  QueueView.vue  SearchView.vue  SettingsView.vue  SetupView.vue
