[package]
name = "rifly"
version = "0.1.0"
description = "A hi-res audio player"
authors = ["you"]
edition = "2021"

[lib]
name = "rifly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["flac", "wav", "alac", "mp3", "aac"] }
cpal = "0.15"
rubato = "0.15"
lofty = "0.24"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
